--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ body{
 
 .header__menu__link{
     font-family: var(--fuente-texto);
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 600;
     color: var(--color-terciario);
     text-decoration: none;
@@ -43,18 +43,19 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .presentacion__contenido{
-    width: 650px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 36px;
+    gap: 40px;
 }
 
 .presentacion__contenido__titulo{
     font-family: var(--fuente-titulo);
-    font-size: 36px;
+    font-size: 2.25rem;
     text-align: justify;
     line-height: 1.5;
 }
@@ -65,7 +66,7 @@ body{
 
 .presentacion__contenido__texto{
     font-family: var(--fuente-texto);
-    font-size: 28px;
+    font-size: 1.75rem;
     text-align: justify;
     line-height: 1.5;
 }
@@ -86,17 +87,17 @@ body{
 
 .presentacion__enlaces__subtitulo{
     font-family: var(--fuente-titulo);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
 .presentacion__enlaces__link{
-    width: 378px;
+    width: 50%;
     text-align: center;
     padding: 21.5px 0;
     border-radius: 8px;
     font-family: var(--fuente-texto);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
     color: var(--color-secundario);
@@ -111,8 +112,8 @@ body{
 }
 
 .presentacion__imagen {
-    width: 615px;
-    height: 615px;
+    width: 37%;
+    height: 37%;
     background-size: cover; 
     background-position: center;
     border-radius: 50%;
@@ -126,6 +127,27 @@ body{
     color: var(--color-primario);
     text-align: center;
     font-family: var(--fuente-texto);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px){
+
+    .header{
+        padding: 10%;
+    }
+
+    .header__menu{
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .presentacion{
+        padding: 5%;
+        flex-direction: column-reverse;
+    }
+
+    .presentacion__contenido{
+        width: auto;
+    }
 }
